--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
                 <img src="./img/Logo.png" alt="Bolean Logo">
                 <h1>Campo Minato</h1>
             </div>
+            <!-- score counter -->
+            <div class="score">Score: <span id="score-counter"></span></div>
             <!-- form -->
             <form id="pratofiorito">
+                <label for="Difficulty">Difficoltà</label>
                 <select id="Difficulty">
                     <option value="easy">Facile</option>
                     <option value="normal">Normale</option>
